--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/nguyenchris/socketio-slack/issues"
   },
-  "homepage": "https://github.com/nguyenchris/socketio-slack#readme"
+  "homepage": "https://github.com/nguyenchris/socketio-slack#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
+  }
 }
